--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,154 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-
-
-    >
+    android:baselineAligned="false">
 
 
 
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#C0C0C0"
-        android:gravity="right"
-        android:layout_weight="1"
-        >
+        android:background="#C0C0C0">
 
-        <ImageButton
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="65dp"
-            android:src="@drawable/github"
-            android:background="#C0C0C0"
-          android:id="@+id/account"
-            />
+            android:layout_height="wrap_content"
+            android:text="笔录系统"
+            android:layout_centerVertical="true"
+            android:textSize="32sp"
+            android:layout_marginStart="15dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/account_infor"
             android:text="请登录/注册"
             android:textColor="#0000FF"
-            android:textSize="35px"
-            android:paddingLeft="30px"
-            android:paddingTop="20px"
+            android:textSize="35sp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true" />
+
+        <ImageButton
+            android:id="@+id/account"
+            android:layout_width="wrap_content"
+            android:layout_height="65dp"
+            android:src="@drawable/github"
+            android:background="#C0C0C0"
+            android:layout_toLeftOf="@id/account_infor"/>
+
+    </RelativeLayout>
 
 
-            />
-    </LinearLayout>
 
-
-
-    <FrameLayout
-        android:id="@+id/right_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"
-        >
-
-    </FrameLayout>
+        android:layout_height="wrap_content">
 
 
+        <FrameLayout
+            android:id="@+id/right_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="50">
+        </FrameLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        >
+        <RadioGroup
+            android:id="@+id/bottom_view"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@android:color/white"
+            android:layout_alignParentBottom="true">
+            <RadioButton
+                android:id="@+id/navigation_set"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="笔录设置"
+                android:drawableTop="@drawable/setting"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="笔录采录"
+                android:drawableTop="@drawable/record"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_proofread"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="文稿核对"
+                android:drawableTop="@drawable/edit"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="笔录查询"
+                android:drawableTop="@drawable/search"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="排版打印"
+                android:drawableTop="@drawable/print"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_manage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="版面管理"
+                android:drawableTop="@drawable/manage"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+            <RadioButton
+                android:id="@+id/navigation_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="系统设置"
+                android:drawableTop="@drawable/setting"
+                style="@style/RadioGroupButtonStyle"
+                android:background="?android:attr/selectableItemBackground"/>
+        </RadioGroup>
 
-        <Button
-            android:id="@+id/set"
 
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:text="笔录设置"
-
-            android:textSize="30px" />
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:id="@+id/record"
-            android:layout_gravity="center_horizontal"
-            android:text="笔录采录"
-
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:id="@+id/Proofread"
-            android:layout_gravity="center_horizontal"
-            android:text="文稿校对"
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:id="@+id/search"
-            android:layout_gravity="center_horizontal"
-            android:text="笔录查询"
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:id="@+id/paint"
-            android:layout_gravity="center_horizontal"
-            android:text="排版打印"
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            android:id="@+id/manage"
-            android:layout_gravity="center_horizontal"
-            android:text="版面管理"
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-
-        <Button
-            android:layout_marginLeft="5px"
-            android:background="@drawable/button_selector"
-            android:textColor="@drawable/text_color_selector"
-            android:id="@+id/system"
-            android:layout_width="170dp"
-            android:layout_height="69dp"
-            android:layout_gravity="center_horizontal"
-            android:text="系统设置"
-            android:textSize="30px"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
