--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -9,134 +9,149 @@
 
      <ImageView
         android:layout_width="match_parent"
-        android:layout_height="152dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/background" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-         android:gravity="center"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="55dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
 
-        >
-
-        <ImageView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/one" />
+            android:orientation="vertical"
+            android:padding="40dp">
 
-        <EditText
-            android:id="@+id/ID"
-            android:layout_width="500px"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="请输入账号"
-            android:textSize="30px"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center_vertical">
 
-            />
-    </LinearLayout>
+                <!--<ImageView-->
+                <!--android:id="@+id/img_account"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@mipmap/account"-->
+                <!--android:layout_centerVertical="true"/>-->
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:paddingTop="30dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/two" />
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="500px"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="请输入密码"
-            android:inputType="textPassword"
-            android:textSize="30px"
-
-            />
+                <scut.carson_ho.diy_view.SuperEditText
+                    android:id="@+id/ID"
+                    android:layout_width="500px"
+                    android:layout_height="wrap_content"
+                    android:hint="请输入账号"
+                    android:textSize="30px" />
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center_horizontal"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="记住密码"
-            android:textSize="20dp"
-            />
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/remenber"
-            />
-
-        <Button
-            android:paddingLeft="330px"
-            android:id="@+id/check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:text="显示密码"
-            android:textSize="18sp"
-            android:background="#00000000"
-            />
 
 
-    </LinearLayout>
+            </RelativeLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="50px">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
 
-        <Button
-            android:id="@+id/login"
-            android:layout_width="250px"
-            android:layout_height="wrap_content"
-            android:background="#ff336699"
-            android:text="登录"
-            android:textColor="#ffffff"
-            android:textSize="30px" />
+                <!--<ImageView-->
+                <!--android:id="@+id/img_password"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:src="@mipmap/password" />-->
 
-        <Button
-            android:id="@+id/sign"
-            android:layout_width="250px"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="150px"
-            android:background="#ff336699"
-            android:text="注册"
-            android:textColor="#ffffff"
-            android:textSize="30px" />
-
-        <Button
-            android:id="@+id/login_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:text="忘记密码"
-            android:textColor="#ff336699"
-            android:textSize="18sp" />
+                <scut.carson_ho.diy_view.SuperEditText
+                    android:id="@+id/password"
+                    android:layout_width="500px"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:hint="请输入密码"
+                    android:inputType="textPassword"
+                    android:textSize="30px"
+                    app:ic_left_click="@mipmap/password_click"
+                    app:ic_left_unclick="@mipmap/password_unclick"
+                    />
 
 
-    </LinearLayout>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal">
+
+                <CheckBox
+                    android:hint="记住密码"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/remenber"
+                    />
+
+                <Button
+                    android:paddingLeft="330px"
+                    android:id="@+id/check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="显示密码"
+                    android:textSize="18sp"
+                    android:background="#00000000"
+                    />
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="50px">
+
+                <Button
+                    android:id="@+id/login"
+                    android:layout_width="250px"
+                    android:layout_height="wrap_content"
+                    android:background="#ff336699"
+                    android:text="登录"
+                    android:textColor="#ffffff"
+                    android:textSize="30px" />
+
+                <Button
+                    android:id="@+id/sign"
+                    android:layout_width="250px"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="150px"
+                    android:background="#ff336699"
+                    android:text="注册"
+                    android:textColor="#ffffff"
+                    android:textSize="30px" />
+
+                <Button
+                    android:id="@+id/login_error"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#00000000"
+                    android:text="忘记密码"
+                    android:textColor="#ff336699"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 
 
 
